NXOS gather facts --add name

--- a/gather-nxos-facts.yml
+++ b/gather-nxos-facts.yml
@@ -7,7 +7,7 @@
 
   tasks:
 
-    - name
+    - name Get nxos facts
       cisco.nxos.nxos_facts:
         gather_subset: all
     - name: Gather only the config and default facts
