--- a/pa-check-ready.yaml
+++ b/pa-check-ready.yaml
@@ -6,8 +6,8 @@
     - name: Check to see if device is ready
       panos_op:
         cmd: 'show chassis-ready'
-      changed_when: false
-      register: result
-      until: result is not failed and (result.stdout | from_json).response.result == 'yes'
-      retries: 50
-      delay: 30
+#      changed_when: false
+#      register: result
+#      until: result is not failed and (result.stdout | from_json).response.result == 'yes'
+#      retries: 50
+#      delay: 30
