--- a/pa-check-ready.yaml
+++ b/pa-check-ready.yaml
@@ -8,7 +8,7 @@
   tasks:
     - name: Check to see if device is ready
       panos_op:
-        provier: '{{ device }}'
+        provider: '{{ device }}'
         cmd: 'show chassis-ready'
 #      changed_when: false
 #      register: result
