--- a/pa-check-ready.yaml
+++ b/pa-check-ready.yaml
@@ -1,21 +1,21 @@
 - hosts: 10.70.12.13
   connection: local
 
-  vars:
-    device:
-      ip_address: 10.70.12.13
-      username: '{{ username | default(omit) }}'
-      password: '{{ password | default(omit) }}'
-      api_key: '{{ api_key | default(omit) }}'
+#  vars:
+#    device:
+#      ip_address: 10.70.12.13
+#      username: '{{ username | default(omit) }}'
+#      password: '{{ password | default(omit) }}'
+#      api_key: '{{ api_key | default(omit) }}'
 
 
   tasks:
     - name: Check to see if device is ready
       panos_op:
-        provider: '{{ device }}'
+        ip_address: '10.70.12.13'
         cmd: 'show chassis-ready'
 #      changed_when: false
-#      register: result
+      register: result
 #      until: result is not failed and (result.stdout | from_json).response.result == 'yes'
 #      retries: 50
 #      delay: 30
