--- a/pa-check-ready.yaml
+++ b/pa-check-ready.yaml
@@ -13,7 +13,7 @@
     - name: Check to see if device is ready
       panos_op:
         ip_address: '10.70.12.13'
-        password: '{{ password | default(omit) }}'
+        password: 'xxxxx'
         cmd: 'show chassis-ready'
 #      changed_when: false
       register: result
