--- a/pa-check-ready.yaml
+++ b/pa-check-ready.yaml
@@ -15,6 +15,6 @@
         cmd: 'show chassis-ready'
 #      changed_when: false
       register: result
-      until: result is not failed and (result.stdout | from_json).response.result == 'yes'
-      retries: 50
-      delay: 30
+#      until: result is not failed and (result.stdout | from_json).response.result == 'yes'
+#      retries: 50
+#      delay: 30
