--- a/pa-check-ready.yaml
+++ b/pa-check-ready.yaml
@@ -18,3 +18,9 @@
 #      until: result is not failed and (result.stdout | from_json).response.result == 'yes'
 #      retries: 50
 #      delay: 30
+
+    - name: Check 2
+      panos_check:
+        ip_address: "10.148.254.20"
+        password: "NiS01801"
+      register: result
