--- a/pa-check-ready.yaml
+++ b/pa-check-ready.yaml
@@ -1,4 +1,5 @@
-- hosts: PaloAlto
+#- hosts: PaloAlto
+- hosts: 10.148.254.20 
   connection: local
 
 #  vars:
@@ -10,14 +11,14 @@
 
 
   tasks:
-    - name: Check to see if device is ready
-      panos_op:
-        cmd: 'show chassis-ready'
-#      changed_when: false
-      register: result
-#      until: result is not failed and (result.stdout | from_json).response.result == 'yes'
-#      retries: 50
-#      delay: 30
+#    - name: Check to see if device is ready
+#      panos_op:
+#        cmd: 'show chassis-ready'
+##      changed_when: false
+#      register: result
+##      until: result is not failed and (result.stdout | from_json).response.result == 'yes'
+##      retries: 50
+##      delay: 30
 
     - name: Check 2
       panos_check:
