--- a/pa-check-ready.yaml
+++ b/pa-check-ready.yaml
@@ -11,17 +11,11 @@
 
 
   tasks:
-#    - name: Check to see if device is ready
-#      panos_op:
-#        cmd: 'show chassis-ready'
+    - name: Check to see if device is ready
+      panos_op:
+        cmd: 'show chassis-ready'
 ##      changed_when: false
-#      register: result
+      register: result
 ##      until: result is not failed and (result.stdout | from_json).response.result == 'yes'
 ##      retries: 50
 ##      delay: 30
-
-    - name: Check 2
-      panos_check:
-        ip_address: "10.148.254.20"
- 
-      register: result
