fixed deprecated cmd

--- a/pa-check-ready.yaml
+++ b/pa-check-ready.yaml
@@ -13,6 +13,7 @@
   tasks:
     - name: Check to see if device is ready
       panos_op:
+        ip_address: 10.148.254.20
         cmd: 'show chassis-ready'
 ##      changed_when: false
       register: result
