Fixed PA role reference

--- a/pa-listif.yaml
+++ b/pa-listif.yaml
@@ -1,6 +1,8 @@
 ---
 - hosts: 10.148.254.20
   connection: local
+  vars:
+    ansible_python_interpreter: /usr/local/bin/python3
 
   #roles:
   #  - role: PaloAltoNetworks.paloaltonetworks
@@ -10,7 +12,7 @@
       panos_op:
         ip_address: 10.148.254.20
         username: "nmsadmin"
-        password: ""
+        password: "NiS01801"
         cmd: 'show interface all'
       register: int_result
     - debug: msg="{{ int_result.stdout }}"
