Fixed PA role reference

--- a/findfiles.yaml
+++ b/findfiles.yaml
@@ -5,3 +5,5 @@
       find:
         paths: /var/lib/awx/vendor/awx_ansible_collectiions
         recurse: yes
+        register: outlist
+    - debug: msg="{{ outlist.stdout }}"
