--- a/findfiles.yaml
+++ b/findfiles.yaml
@@ -6,7 +6,8 @@
         paths: /var/lib/awx
         recurse: yes
         file_type: directory
-        excludes: 'python3.6'
+        patterns: '*ollectio*'
+#        excludes: 'python3.6'
       register: outlist
     - debug: msg="{{ outlist.files }}"
 #      with_items: "{{ outlist.files }}"
