--- a/pa-listif.yaml
+++ b/pa-listif.yaml
@@ -3,10 +3,8 @@
   connection: local
 #  vars:
 #    ansible_python_interpreter: /var/lib/awx/venv/ansible/bin/python
-#  collections:
-#    - name: "https://github.com/xbbn8x7/awx-vpn.git"
-#      type: git
-#      version: master
+  collections:
+    - paloaltonetworks.panos
 #  tasks:
 #  - name: Get the system info
 #    panos_op:
