--- a/gather-nxos-facts.yml
+++ b/gather-nxos-facts.yml
@@ -8,9 +8,9 @@
     - creds: "{{ lookup('hashi_vault', 'secret=tst2/data/cisco token=s.s67Xlia8FpDTPOiAKBg4LZRx url=http://10.80.23.81:8200') }}"
 
   tasks:
-#    - name: set Cisco creds
-#      set_fact:
-#        cisco: "{{ creds['data'] }}"
+    - name: set Cisco creds
+      set_fact:
+        cisco: "{{ creds['data'] }}"
 
     - name: Get nxos facts
       nxos_command:
