--- a/gather-nxos-facts.yml
+++ b/gather-nxos-facts.yml
@@ -18,4 +18,5 @@
         password: "{{ cisco['password'] }}"
         commands: show ver
         timeout: 30
-      
+      register: ver_out
+    -debug: msg={{ ver_out.stdout }}
