--- a/gather-asa-facts-v2.yaml
+++ b/gather-asa-facts-v2.yaml
@@ -5,11 +5,18 @@
   connection: local
   become: yes
   become_method: enable
+  vars:
+    - creds: "{{ lookup('hashi_vault', 'secret=tst2/data/cisco token=s.s67Xlia8FpDTPOiAKBg4LZRx url=http://10.80.23.81:8200') }}"
 
   tasks:
+    - name: set Cisco creds
+      set_fact:
+        cisco: "{{ creds['data'] }}"
 
    - name: show run
      asa_command:
+       username: "{{ cisco['username'] }}"
+       password: "{{ cisco['password'] }}"
        commands: show run
      register: run
      become: yes
