--- a/gather-nxos-facts-v2.yml
+++ b/gather-nxos-facts-v2.yml
@@ -5,15 +5,16 @@
   become: yes
   become_method: enable
 
-  vault_secret: tst2/data/cisco
-  vault_token: s.s67Xlia8FpDTPOiAKBg4LZRx
-  vault_url: http://10.80.23.81:8200
-  vault_options: "secret={{ vault_secret }} token={{ vault_token }} url={{ vault_url }}"
+  vars:
+    vault_secret: tst2/data/cisco
+    vault_token: s.s67Xlia8FpDTPOiAKBg4LZRx
+    vault_url: http://10.80.23.81:8200
+    vault_options: "secret={{ vault_secret }} token={{ vault_token }} url={{ vault_url }}"
 
-  creds: "{{ lookup('hashi_vault', vault_options).data }}"
+    creds: "{{ lookup('hashi_vault', vault_options).data }}"
 
-  ansible_user: "{{ creds.username }}"
-  ansible_password: "{{ creds.password }}"
+    ansible_user: "{{ creds.username }}"
+    ansible_password: "{{ creds.password }}"
 
   tasks:
     - name: Get nxos facts
