--- a/gather-nxos-facts-v2.yml
+++ b/gather-nxos-facts-v2.yml
@@ -20,8 +20,8 @@
     - name: Get nxos facts
       nxos_command:
         commands: show ver
-        timeout: 30
+#        timeout: 30
       register: ver_cmd
 
     - name: show ver
-      debug: msg="{{ ver_out.stdout }}"
+      debug: msg="{{ ver_cmd.stdout }}"
