--- a/gather-asa-facts-v3.yaml
+++ b/gather-asa-facts-v3.yaml
@@ -15,6 +15,7 @@
 
     ansible_user: "{{ creds.username }}"
     ansible_password: "{{ creds.password }}"
+    ansible_enable:  "{{ creds.enable }}"
 
   tasks:
       - name: show run
